<resources>
    <string name="day_of_week_1">星期日</string>
    <string name="day_of_week_2">星期一</string>
    <string name="day_of_week_3">星期二</string>
    <string name="day_of_week_4">星期三</string>
    <string name="day_of_week_5">星期四</string>
    <string name="day_of_week_6">星期五</string>
    <string name="day_of_week_7">星期六</string>
    <string name="app_name">Demo</string>
    <string name="title_activity_cafe_map">Demo</string>
    <string name="kapi">Demo</string>
    <string name="findkapi">Demo</string>
    <string name="alert_btn_confirm">確定</string>
    <string name="alert_btn_cancel">取消</string>
    <string name="msg_loading">Loading...</string>
    <string name="msg_network_not_found">請檢查網路狀態</string>
    <string name="close_str">關閉</string>
    <string name="open_str">找地點</string>
    <string name="text_wifi">WIFI</string>
    <string name="text_tasty">咖啡</string>
    <string name="text_quiet">安靜</string>
    <string name="text_seat">座位</string>
    <string name="text_cheap">價格</string>
    <string name="text_music">環境</string>
    <string name="navigation">導航</string>
    <string name="navigation_on_map">地圖導航</string>
    <string name="text_near_my">離我最近</string>
    <string name="alert_donot_search">沒找到包含關鍵字「%s」的咖啡廳</string>
    <string name="alert_donot_near_my">沒找到最近的咖啡廳</string>
    <string name="alert_data_empty">請先選擇地區</string>
    <string name="title_setting">設定</string>
    <string name="setting_item_filter">篩選評分下限</string>
    <string name="text_all">全部</string>
    <string name="searching">查詢中...</string>
    <string name="picker_title_filter_low">快篩分數下限</string>
    <string name="searching_google">搜尋店家</string>
    <string name="title_filter_set">篩選偏好設定</string>
    <string name="text_restore">回復預設值</string>
    <string name="btn_filter_start">開 始 篩 選</string>
    <string name="search_title">搜尋咖啡店名稱</string>
    <string name="text_distance_hint">距離目前位置</string>
    <string name="text_slide_header">請選擇你所在的位置</string>
    <string name="sub_menu_0_tw">基隆</string>
    <string name="sub_menu_1_tw">台北</string>
    <string name="sub_menu_2_tw">桃園</string>
    <string name="sub_menu_3_tw">新竹</string>
    <string name="sub_menu_4_tw">台中</string>
    <string name="sub_menu_5_tw">台南</string>
    <string name="sub_menu_6_tw">高雄</string>
    <string name="sub_menu_7_tw">屏東</string>
    <string name="sub_menu_8_tw">宜蘭</string>
    <string name="sub_menu_9_tw">台東</string>
    <string name="sub_menu_10_tw">苗栗</string>
    <string name="sub_menu_11_tw">澎湖</string>
    <string name="sub_menu_12_tw">花蓮</string>
    <string name="sub_menu_13_tw">南投</string>
    <string name="sub_menu_14_tw">彰化</string>
    <string name="sub_menu_15_tw">雲林</string>
    <string name="sub_menu_16_tw">嘉義</string>
    <string name="sub_menu_17_tw">日本</string>
    <string name="sub_menu_18_tw">美國</string>
    <string name="sub_menu_19_tw">英國</string>
    <string name="price_100">NT$1–100元 / 人</string>
    <string name="price_200">NT$101–200元 / 人</string>
    <string name="price_300">NT$201–300元 / 人</string>
    <string name="price_400">NT$301–400元 / 人</string>
    <string name="sub_menu_0_en">Keelung</string>
    <string name="sub_menu_1_en">Taipei</string>
    <string name="sub_menu_2_en">Taoyuan</string>
    <string name="sub_menu_3_en">Hsinchu</string>
    <string name="sub_menu_4_en">Taichung</string>
    <string name="sub_menu_5_en">Tainan</string>
    <string name="sub_menu_6_en">Kaohsiung</string>
    <string name="sub_menu_7_en">Pingtung</string>
    <string name="sub_menu_8_en">Yilan</string>
    <string name="sub_menu_9_en">Taitung</string>
    <string name="sub_menu_10_en">Miaoli</string>
    <string name="sub_menu_11_en">Penghu</string>
    <string name="sub_menu_12_en">Hualien</string>
    <string name="sub_menu_13_en">Nantou</string>
    <string name="sub_menu_14_en">Changhua</string>
    <string name="sub_menu_15_en">Yunlin</string>
    <string name="sub_menu_16_en">Chiayi</string>
    <string name="sub_menu_17_en">JP</string>
    <string name="sub_menu_18_en">US</string>
    <string name="sub_menu_19_en">GB</string>
    <string name="filter_0">WIFI</string>
    <string name="filter_1">安靜</string>
    <string name="filter_2">價格</string>
    <string name="filter_3">座位</string>
    <string name="filter_4">咖啡</string>
    <string name="filter_5">餐點</string>
    <string name="filter_6">環境</string>
    <string name="filter_tab_nothing">不限</string>
    <string name="filter_tab_normal">普通</string>
    <string name="filter_tab_soso">還好</string>
    <string name="filter_tab_fast">很快</string>
    <string name="filter_tab_quiet">很安靜</string>
    <string name="filter_tab_cheap">便宜</string>
    <string name="filter_tab_more">很多</string>
    <string name="filter_tab_good">很讚</string>
    <string name="filter_tab_tasty">好吃</string>
    <string name="filter_tab_comfortable">舒適</string>
    <string name="fast_filter_0">偏好篩選</string>
    <string name="fast_filter_1">WiFi穩</string>
    <string name="fast_filter_2">插座多</string>
    <string name="fast_filter_3">不限時</string>
    <string name="fast_filter_4">營業中</string>
    <string name="fast_filter_5">評分高</string>
    <string name="fast_filter_6">清除設定</string>
    <string name="menu_about_us">關於我們</string>
    <string name="menu_contact_us">聯絡我們</string>
    <string name="menu_fanpage">粉絲專頁</string>
    <string name="menu_rate_us">幫我們評分</string>
    <string name="text_distance">距離</string>
    <string name="text_near_mrt_station">最近捷運</string>
    <string name="title_search_local">最近搜尋紀錄</string>
    <string name="title_search_hot">熱門搜尋</string>
    <string name="text_distance_unknow">未知</string>
    <string name="alert_city_not_same">目前尚未支援跨城市搜尋，請先將城市切換到「%s」後再進行搜尋</string>
    <string name="text_search_result">搜尋結果</string>
    <string name="title_activity_settings">設定</string>
    <string name="radio_not_socket">無插座</string>
    <string name="radio_not_limited">不設定</string>
    <string name="radio_has_limited">有限時</string>
    <string name="radio_work_date_no_limited">客滿/人多會限時</string>
    <string name="radio_all_day_no_limited">不限時</string>
    <string name="radio_some_socket">部分座位有</string>
    <string name="radio_a_lot_of_socket">很多插座</string>
    <string name="text_has_socket">插座數量</string>
    <string name="filter_title_other">其他選項</string>
    <string name="text_has_limited_to_time">有無時間限制</string>
    <string name="text_can_stand_up">可站立工作</string>
    <string name="loading_searching">搜尋中...</string>
    <string name="loading_filtting">篩選中...</string>
    <string name="text_see_all_time">查看其他時段</string>
    <string name="text_open">營業中</string>
    <string name="text_close">休息中</string>
    <string name="sunday">星期日</string>
    <string name="monday">星期一</string>
    <string name="tuesday">星期二</string>
    <string name="wednesday">星期三</string>
    <string name="thursday">星期四</string>
    <string name="friday">星期五</string>
    <string name="saturday">星期六</string>
    <string name="btn_keep_search">繼續探索</string>
    <string name="text_limited_to_time">限時</string>
    <string name="text_socket">插座</string>
    <string name="text_stand">站立桌</string>
    <string name="text_data_empty">無資料</string>
    <string name="text_have">有</string>
    <string name="text_maybe">看情況</string>
    <string name="text_do_not_have">無</string>
    <string name="text_a_few">很少</string>
    <string name="text_middle">還好</string>
    <string name="text_a_lot">很多</string>
    <string name="version">v1.0</string>
    <string name="text_product_detail">找尋適合的咖啡店一直不是件容易的事，我們希望提供一個解決方案，讓你能輕鬆找到最適合自己的咖啡店，不論你想要去咖啡店工作、聚餐、聊天都能快速找到適合的店家。我們將持續優化產品，有任何建議也歡迎隨時來信告訴我們:D</string>
    <string name="title_about_us">關於我們</string>
    <string name="text_time_from_user">網友提供</string>
    <string name="text_no_time">暫無資料</string>
    <string name="detail_header_store_info">店家資訊</string>
    <string name="btn_other_open_time">其他營業時間</string>
    <string name="detail_header_map">位置訊息</string>
    <string name="watch_street_view">街景模式</string>
    <string name="member_tab_1">已收藏</string>
    <string name="member_tab_2">我去過</string>
    <string name="member_tab_3">已評分</string>
    <string name="member_tab_4">已評價</string>
    <string name="title_member">個人資料</string>
    <string name="title_member_edit">編輯個人資料</string>
    <string name="text_change_avatar">更換使用者頭像</string>
    <string name="text_user_name">使用者名稱</string>
    <string name="text_user_email">Email信箱</string>
    <string name="text_user_area">地區</string>
    <string name="hint_user_intro">請輸入自我介紹</string>
    <string name="text_user_intro">自我介紹（30字內）</string>
    <string name="btn_save_setting">儲存設定</string>
    <string name="share">分享這間店</string>
    <string name="menu_edit">編輯店家資料</string>
    <string name="menu_report">錯誤回報</string>
    <string name="btn_hot">熱門</string>
    <string name="detail_header_rates">店家評分</string>
    <string name="detail_rate_text_wifi">WIFI穩定</string>
    <string name="detail_rate_text_quiet">安靜程度</string>
    <string name="detail_rate_text_cheap">價格實惠</string>
    <string name="detail_rate_text_seat">通常有位置</string>
    <string name="detail_rate_text_cafe">咖啡品質</string>
    <string name="detail_rate_text_music">環境舒適度</string>
    <string name="detail_rate_text_socket">插座數量</string>
    <string name="detail_rate_text_limittime">有無限時</string>
    <string name="detail_rate_text_stand">站立座位</string>
    <string name="btn_rating">我要評分</string>
    <string name="detail_header_reviews">留言評價</string>
    <string name="sent_rates">送出評分</string>
    <string name="text_seat_count">座位數量</string>
    <string name="detail_rate_text_food">餐點美味</string>
    <string name="text_favorite_count">%s人已收藏</string>
    <string name="btn_favorite">收藏</string>
    <string name="btn_check_in">我要打卡</string>
    <string name="text_check_in_count">%s人來過</string>
    <string name="text_rate_count">%s人已評分</string>
    <string name="btn_review">我要評價</string>
    <string name="text_review_count">%s人已留言</string>
    <string name="btn_rate">我要評分</string>
    <string name="text_already_rate">已評分</string>
    <string name="text_already_write">已填寫</string>
    <string name="text_already_favorite">已收藏</string>
    <string name="text_already_visit">已打卡</string>
    <string name="text_already_comment">已評價</string>
    <string name="submit_a_comment">我要留言</string>
    <string name="see_more_comment">看更多評價(%s)</string>
    <string name="see_more_comment_default">看更多評價(0)</string>
    <string name="filter_title_pickers">調整分數至你的需求</string>
    <string name="text_current_time">特定營業時段</string>
    <string name="text_opening">目前營業中</string>
    <string name="filter_title_fast_settings">快速設定</string>
    <string name="filter_title_open_time">營業時間</string>
    <string name="emus_filter_setting_1">適合工作/讀書</string>
    <string name="emus_filter_setting_2">C/P值高</string>
    <string name="emus_filter_setting_3">平均4分</string>
    <string name="post_cafe_title_help_me">請協助填寫店家相關資訊</string>
    <string name="post_cafe_title_name">店家名稱</string>
    <string name="post_cafe_title_city">所在城市</string>
    <string name="post_cafe_hint_select_name">請選擇店家</string>
    <string name="post_cafe_hint_input_name">請輸入店家</string>
    <string name="post_cafe_hint_facebook_url">請輸入網址</string>
    <string name="post_cafe_hint_city">請選擇城市</string>
    <string name="post_cafe_title_tag">選擇店家特色標籤</string>
    <string name="designer">Designer</string>
    <string name="simon_lin">Simon Lin</string>
    <string name="android_developer">Android Developer</string>
    <string name="yalan">Yalan</string>
    <string name="ios_developer">iOS Developer</string>
    <string name="samuel">Samuel</string>
    <string name="shou">Shou</string>
    <string name="back_end_developer">Back-End Developer</string>
    <string name="jack">Jack</string>
    <string name="see_special_about_kapi">觀看KAPI特色</string>
    <string name="text_about_slogan">快速找到最適合的咖啡店</string>
    <string name="about_subtitle_product">產品介紹</string>
    <string name="menu_close">回報店家已歇業</string>
</resources>