<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".activitys.details.CafeDetailsActivity">
    <!--<item android:id="@+id/menu_share"-->
        <!--android:title="@string/share"-->
        <!--android:icon="@drawable/share_alt"-->
        <!--app:showAsAction="ifRoom" />-->

    <item android:id="@+id/menu_edit"
        android:title="@string/menu_edit"
        android:icon="@drawable/edit"
        app:showAsAction="never" />
    <item android:id="@+id/menu_report"
        android:title="@string/menu_report"
        app:showAsAction="never" />
    <item android:id="@+id/menu_close"
        android:title="@string/menu_close"
        app:showAsAction="never" />
</menu>